--- a/app/src/main/res/layout/list_view_create_set_item.xml
+++ b/app/src/main/res/layout/list_view_create_set_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/border_white"
@@ -65,5 +66,15 @@
         android:layout_marginBottom="10dp"
         android:text="DEFINITION"
         android:textColor="@color/black"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tvErrorMsg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txt_answer"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/red"
         android:textStyle="bold" />
 </androidx.appcompat.widget.LinearLayoutCompat>
